# odnelazm

./: Cargo.toml  LICENSE  Makefile  README.md  docker-compose.metrics.yml  hansard.json
.github/: dependabot.yml
.github/workflows/: audit.yml  publish-docker-image.yaml  rust-checks.yaml
crates/odnelazm/: Cargo.toml  README.md
crates/odnelazm-cli/: Cargo.toml  README.md
crates/odnelazm-cli/src/: main.rs
crates/odnelazm-ingest/: Cargo.toml  README.md
crates/odnelazm-ingest/migrations/: 0001_init.sql  0002_bill_speakers.sql  0003_dedupe_speakers.sql  0004_members.sql  0005_topics.sql  0006_contribution_text.sql  0007_member_enrichment.sql  0008_fix_bill_mentions_unique.sql  0009_bill_sponsor_id.sql  0010_bill_summary.sql  0011_sitting_youtube.sql  0012_sitting_generated_summary.sql  0013_summary_model.sql  0014_topic_summary.sql
crates/odnelazm-ingest/src/: embed.rs  error.rs  lib.rs  pipeline.rs  postgres.rs  store.rs  summarize.rs
crates/odnelazm-ingest/src/enricher/: lm_studio.rs  mod.rs  prompts.rs
crates/odnelazm-ingest/src/extract/: bills.rs  mod.rs  speakers.rs  topics.rs
crates/odnelazm-ingest/src/metrics/: mod.rs  prometheus.rs
crates/odnelazm-mcp/: Cargo.toml  Dockerfile  README.md  fly.toml
crates/odnelazm-mcp/src/: instructions.md  lib.rs  mcp.rs
crates/odnelazm/fixtures/archive/persons/: person_farhiya  person_rose  person_samson
crates/odnelazm/fixtures/archive/root-page/: Hansard __ Mzalendo
crates/odnelazm/fixtures/current/: Boss_Gladys_Jepkosgei_with_paginated_contributions.html  Hansard_list_paginated  national_assembly_13th_parliament_paginated  national_assembly_hansard_sitting  national_assembly_hansard_sitting_new_format  senate_13th_parliament_paginated  senate_hansard_sitting
crates/odnelazm/fixtures/persons/: person_samuel
crates/odnelazm/src/: lib.rs  parser.rs  scraper.rs  types.rs  utils.rs
crates/odnelazm/src/archive/: mod.rs  parser.rs  scraper.rs  types.rs  utils.rs
crates/odnelazm/src/current/: mod.rs  parser.rs  scraper.rs  types.rs
crates/odnelazm/src/unified/: mod.rs  scraper.rs  types.rs
fixtures/: hansard_detail_2020
fixtures/persons/: person_stewart
monitoring/grafana/dashboards/: odnelazm-ingest.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
src/: lib.rs  parser.rs  scraper.rs  types.rs
