[workspace]
members = ["crates/odnelazm", "crates/odnelazm-cli", "crates/odnelazm-mcp"]
resolver = "2"


[workspace.package]
authors = ["c12i <hello@c12i.xyz>"]
edition = "2024"
repository = "https://github.com/c12i/odnelazm"
categories = ["parser-implementations", "command-line-utilities"]
license = "MIT"
