[workspace]
members = ["crates/odnelazm", "crates/odnelazm-cli", "crates/odnelazm-mcp", "crates/odnelazm-ingest"]
resolver = "2"


[workspace.package]
authors = ["c12i <hello@c12i.xyz>"]
edition = "2024"
repository = "https://github.com/mwananchi-tech/odnelazm"
categories = ["parser-implementations", "command-line-utilities"]
license = "MIT"
