[package]
name = "odnelazm-cli"
description = "Command Line Interface for interacting with scraped data from odnelazm"
version = "1.0.0-beta.5"
readme = "README.md"
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "odnelazm"
path = "./src/main.rs"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
odnelazm = { version = "1.0.0-beta.6", path = "../odnelazm" }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
