[package]
name = "odnelazm-ingest"
description = "Ingestion pipeline for odnelazm hansard data"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
odnelazm = { version = "1.0.0-beta.7", path = "../odnelazm" }
async-trait = "0.1"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3"
log = "0.4"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "json",
] }
thiserror = "2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"
