[package]
name = "odnelazm"
description = "A mzalendo.com web scaraper and parser"
version = "1.0.0-beta.1"
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4.22"
regex = "1.11.1"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
